hphp/test/zend/good/ext/mbstring/tests/mb_ereg_search_regs.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('mbstring')) die('skip mbstring not enabled');
function_exists('mb_ereg_search_regs') || die("skip mb_ereg_search_regs() not available");
}
